NP-42459-delete-draft-doi-sync
