# datacite-delete-draft-doi-handler/src/main/java/no/unit/nva/datacite/handlers/doi/DeleteDraftDoiHandler.java
@@ -1,15 +1,12 @@
 package no.unit.nva.datacite.handlers.doi;
 
-import static java.util.Objects.isNull;
 import static no.unit.nva.datacite.handlers.resource.DeleteDraftDoiAppEnv.getCustomerSecretsSecretKey;
 import static no.unit.nva.datacite.handlers.resource.DeleteDraftDoiAppEnv.getCustomerSecretsSecretName;
+import static nva.commons.core.attempt.Try.attempt;
 import com.amazonaws.services.lambda.runtime.Context;
+import java.net.HttpURLConnection;
 import java.net.URI;
-import java.time.Instant;
-import java.util.ArrayList;
-import no.unit.nva.datacite.commons.DoiUpdateDto;
-import no.unit.nva.datacite.commons.DoiUpdateEvent;
-import no.unit.nva.datacite.commons.DoiUpdateRequestEvent;
+import no.unit.nva.datacite.handlers.model.DeleteDraftDoiRequest;
 import no.unit.nva.doi.DoiClient;
 import no.unit.nva.doi.datacite.clients.DataCiteClient;
 import no.unit.nva.doi.datacite.clients.exception.ClientException;
@@ -17,66 +14,66 @@ import no.unit.nva.doi.datacite.connectionfactories.DataCiteConfigurationFactory
 import no.unit.nva.doi.datacite.connectionfactories.DataCiteConnectionFactory;
 import no.unit.nva.doi.datacite.restclient.models.DoiStateDto;
 import no.unit.nva.doi.models.Doi;
-import no.unit.nva.events.handlers.DestinationsEventBridgeEventHandler;
-import no.unit.nva.events.models.AwsEventBridgeDetail;
-import no.unit.nva.events.models.AwsEventBridgeEvent;
-import no.unit.nva.identifiers.SortableIdentifier;
+import nva.commons.apigateway.ApiGatewayHandler;
+import nva.commons.apigateway.RequestInfo;
+import nva.commons.apigateway.exceptions.BadGatewayException;
+import nva.commons.core.Environment;
 import nva.commons.core.JacocoGenerated;
 import nva.commons.secrets.SecretsReader;
 
-public class DeleteDraftDoiHandler extends DestinationsEventBridgeEventHandler<DoiUpdateRequestEvent, DoiUpdateEvent> {
+public class DeleteDraftDoiHandler extends ApiGatewayHandler<DeleteDraftDoiRequest, Void> {
 
-    protected static final String PUBLICATION_HAS_NO_PUBLISHER = "Publication has no publisher";
-    protected static final String EXPECTED_EVENT_WITH_DOI = "Expected event with DOI";
-    protected static final String ERROR_GETTING_DOI_STATE = "Error getting DOI state";
     protected static final String ERROR_DELETING_DRAFT_DOI = "Error deleting draft DOI";
     protected static final String NOT_DRAFT_DOI_ERROR = "DOI state is not draft, aborting deletion.";
     private static final String DOI_STATE_DRAFT = "draft";
     private final DoiClient doiClient;
 
-    @JacocoGenerated
-    public DeleteDraftDoiHandler() {
-        this(defaultDoiClient());
-    }
-
-    public DeleteDraftDoiHandler(DoiClient doiClient) {
-        super(DoiUpdateRequestEvent.class);
+    public DeleteDraftDoiHandler(DoiClient doiClient, Environment environment) {
+        super(DeleteDraftDoiRequest.class, environment);
         this.doiClient = doiClient;
     }
 
-    @Override
-    protected DoiUpdateEvent processInputPayload(DoiUpdateRequestEvent input,
-                                                 AwsEventBridgeEvent<AwsEventBridgeDetail<DoiUpdateRequestEvent>> event,
-
-                                                 Context context) {
-        validateInput(input);
-        var doi = Doi.fromUri(input.getDoi());
-        var customerId = input.getCustomerId();
-        var publicationIdentifier = SortableIdentifier.fromUri(input.getPublicationId());
-        verifyDoiIsInDraftState(customerId, doi);
-
-        return new DoiUpdateEvent(DoiUpdateEvent.DOI_UPDATED_EVENT_TOPIC,
-                                  deleteDraftDoi(customerId, publicationIdentifier, doi));
+    @JacocoGenerated
+    public DeleteDraftDoiHandler() {
+        this(defaultDoiClient(), new Environment());
     }
 
-    private static void validateInput(DoiUpdateRequestEvent input) {
-        var problems = new ArrayList<String>();
-        if (isNull(input.getCustomerId())) {
-            problems.add("No customer in event.");
+    @Override
+    protected Void processInput(DeleteDraftDoiRequest input, RequestInfo requestInfo, Context context)
+        throws  BadGatewayException {
+        var customerId = input.getCustomerId();
+        var doi = Doi.fromUri(input.getDoi());
+
+        return attempt(() -> doiClient.getDoi(customerId, doi))
+            .map(this::validateState)
+            .map(action -> deleteDraftDoi(customerId, doi))
+            .orElseThrow(failure -> new BadGatewayException(ERROR_DELETING_DRAFT_DOI));
+    }
+
+    private String validateState(DoiStateDto doi) {
+        if (!DOI_STATE_DRAFT.equalsIgnoreCase(doi.getState())) {
+            throw new RuntimeException(NOT_DRAFT_DOI_ERROR);
         }
-        if (isNull(input.getDoi())) {
-            problems.add("No doi in event.");
+        return doi.getDoi();
+    }
+
+    private Void deleteDraftDoi(URI customerId, Doi draftDoi) {
+        try {
+            doiClient.deleteDraftDoi(customerId, draftDoi);
+        } catch (ClientException e) {
+            throw new RuntimeException(e);
         }
-        if (isNull(input.getPublicationId())) {
-            problems.add("No publication Id in event.");
-        }
-        if (!problems.isEmpty()) {
-            throw new RuntimeException(String.join("\n", problems));
-        }
+        return null;
+    }
+
+    @Override
+    protected Integer getSuccessStatusCode(DeleteDraftDoiRequest input, Void output) {
+        return HttpURLConnection.HTTP_ACCEPTED;
     }
 
     @JacocoGenerated
     private static DoiClient defaultDoiClient() {
+
         DataCiteConfigurationFactory configFactory = new DataCiteConfigurationFactory(
             new SecretsReader(), getCustomerSecretsSecretName(), getCustomerSecretsSecretKey());
 
@@ -84,32 +81,4 @@ public class DeleteDraftDoiHandler extends DestinationsEventBridgeEventHandler<D
         return new DataCiteClient(configFactory, connectionFactory);
     }
 
-    private void verifyDoiIsInDraftState(URI customerId, Doi doi) {
-        DoiStateDto doiState;
-        try {
-            doiState = doiClient.getDoi(customerId, doi);
-        } catch (ClientException e) {
-            throw new RuntimeException(ERROR_GETTING_DOI_STATE, e);
-        }
-
-        if (!DOI_STATE_DRAFT.equalsIgnoreCase(doiState.getState())) {
-            throw new RuntimeException(NOT_DRAFT_DOI_ERROR);
-        }
-    }
-
-    private DoiUpdateDto deleteDraftDoi(URI customerId,
-                                        SortableIdentifier publicationIdentifier,
-                                        Doi doi) {
-        try {
-            doiClient.deleteDraftDoi(customerId, doi);
-        } catch (ClientException e) {
-            throw new RuntimeException(ERROR_DELETING_DRAFT_DOI, e);
-        }
-
-        return new DoiUpdateDto.Builder()
-                   .withDoi(null)
-                   .withPublicationId(publicationIdentifier)
-                   .withModifiedDate(Instant.now())
-                   .build();
-    }
 }
